# package-example

gethostbyaddr/: Makefile
gethostbyaddr/src/: Makefile  gethostbyaddr.c
hello/: Makefile
hello/files/: hello.conf
hello/src/: Makefile
hello_cmake/: Makefile
hello_cmake/files/: hello.init
hello_cmake/src/: CMakeLists.txt  main.c
hellow_word/: Makefile
hellow_word/src/: Makefile  main.c
openwrt-package-template/: Makefile
openwrt-package-template/files/: openwrt-package-template.conf  openwrt-package-template.init
openwrt-package-template/inc/: cJSON.h  common.h  msgHandel.h
openwrt-package-template/lib/: libmqttclient.a.bak
openwrt-package-template/src/: CMakeLists.txt  common.c  log.c  main.c  msgHandel.c
